[gd_scene load_steps=26 format=2]

[ext_resource path="res://ui/theme/main.theme" type="Theme" id=1]
[ext_resource path="res://ui/setup/components/players/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/ui/arrow.png" type="Texture" id=3]
[ext_resource path="res://shaders/bb.tres" type="Material" id=4]
[ext_resource path="res://assets/textures/ui/panel_frame.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/ui/panel_frame_flip.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/ui/prvw_body_small.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/ui/kb_or_c.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/ui/prvw_shadow.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/players/faces/big_1.png" type="Texture" id=10]
[ext_resource path="res://shaders/recolour_sprite.tres" type="Material" id=11]
[ext_resource path="res://assets/textures/players/hand_1.png" type="Texture" id=12]
[ext_resource path="res://shaders/recolour_hands.tres" type="Material" id=13]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 REF1 : hint_color;
uniform vec4 REF2 : hint_color;
uniform vec4 REF3 : hint_color;

uniform vec4 NEW1 : hint_color;
uniform vec4 NEW2 : hint_color;
uniform vec4 NEW3 : hint_color;

void fragment() {
    vec4 curr_color = texture(TEXTURE,UV); // Get current color of pixel
	
	//Lets check that our current pixel colour is any of the OLDCOLORs we wish to swap
	//If our pixel is an old colour then swap COLOR to NEWCOLOR, very simple
    if (curr_color == REF1)
	{
        COLOR = NEW1;
    }
	else if (curr_color == REF2)
	{
        COLOR = NEW2;
    }
	else if (curr_color == REF3)
	{
        COLOR = NEW3;
    }
	else
	{
		//We didn't find any old colors for this pixel so keep it's original color
        COLOR = curr_color;
    }
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/REF1 = Color( 1, 1, 0, 1 )
shader_param/REF2 = Color( 1, 0, 0, 1 )
shader_param/REF3 = null
shader_param/NEW1 = null
shader_param/NEW2 = null
shader_param/NEW3 = null

[sub_resource type="Animation" id=3]
length = 0.18
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Setup/Body/Left:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -1, 18 ), Vector2( 0, 18 ), Vector2( 1, 18 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "clothes"
length = 0.18
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Setup/Clothes/Left:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 18 ), Vector2( 0, 18 ), Vector2( 1, 18 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "face"
length = 0.18
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Setup/Face/Left:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 18 ), Vector2( 0, 18 ), Vector2( 1, 18 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "hair"
length = 0.18
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Setup/Hair/Left:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 18 ), Vector2( 0, 18 ), Vector2( 1, 18 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hair_colour"
length = 0.18
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Setup/Hair_Colour/Left:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 18 ), Vector2( 0, 18 ), Vector2( 1, 18 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.18
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Setup/Body/Right:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 42, 18 ), Vector2( 41, 18 ), Vector2( 40, 18 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "clothes"
length = 0.18
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Setup/Clothes/Right:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 42, 18 ), Vector2( 41, 18 ), Vector2( 40, 18 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "face"
length = 0.18
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Setup/Face/Right:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 42, 18 ), Vector2( 41, 18 ), Vector2( 40, 18 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "hair"
length = 0.18
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Setup/Hair/Right:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 42, 18 ), Vector2( 41, 18 ), Vector2( 40, 18 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "hair_colour"
length = 0.18
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Setup/Hair_Colour/Right:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 42, 18 ), Vector2( 41, 18 ), Vector2( 40, 18 ) ]
}

[node name="Player" type="Control"]
material = ExtResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -512.0
margin_bottom = -76.0
mouse_filter = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Control" parent="."]
visible = false
margin_top = 106.0
margin_bottom = 106.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prompt" type="TextureRect" parent="Connect"]
margin_left = -22.0
margin_top = -30.0
margin_right = 22.0
margin_bottom = 30.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Connect/Prompt"]
margin_top = -24.0
margin_right = 44.0
margin_bottom = -11.0
text = "Press"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setup" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Control" parent="Setup"]
margin_left = -20.0
margin_top = 16.0
margin_right = 20.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Sprite" parent="Setup/Sprite"]
modulate = Color( 1, 1, 1, 0.458824 )
texture = ExtResource( 9 )
centered = false
offset = Vector2( 4, 4 )

[node name="Body" type="Sprite" parent="Setup/Sprite"]
material = SubResource( 2 )
position = Vector2( 4, 4 )
texture = ExtResource( 7 )
centered = false

[node name="Face" type="Sprite" parent="Setup/Sprite"]
texture = ExtResource( 10 )
centered = false
offset = Vector2( 4, 4 )
hframes = 2

[node name="Hair" type="Sprite" parent="Setup/Sprite"]
material = ExtResource( 11 )
centered = false
offset = Vector2( 4, 4 )

[node name="Left" type="Sprite" parent="Setup/Sprite"]
material = ExtResource( 13 )
position = Vector2( 13, 20 )
texture = ExtResource( 12 )
centered = false
flip_h = true

[node name="Right" type="Sprite" parent="Setup/Sprite"]
material = ExtResource( 13 )
position = Vector2( 24, 20 )
texture = ExtResource( 12 )
centered = false

[node name="Number" type="Label" parent="Setup"]
margin_left = -22.0
margin_right = 22.0
margin_bottom = 13.0
text = "P0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Panel" parent="Setup"]
use_parent_material = true
margin_left = -22.0
margin_top = 60.0
margin_right = 22.0
margin_bottom = 89.0
focus_next = NodePath("../Skin")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Setup/Body"]
use_parent_material = true
margin_top = 1.0
margin_right = 44.0
margin_bottom = 14.0
text = "Body"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Setup/Body"]
use_parent_material = true
margin_top = 14.0
margin_right = 44.0
margin_bottom = 27.0
text = "L1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureRect" parent="Setup/Body"]
use_parent_material = true
margin_left = -1.0
margin_top = 18.0
margin_right = 2.0
margin_bottom = 24.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureRect" parent="Setup/Body"]
use_parent_material = true
margin_left = 42.0
margin_top = 18.0
margin_right = 45.0
margin_bottom = 24.0
texture = ExtResource( 3 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top_Frame" type="TextureRect" parent="Setup/Body"]
use_parent_material = true
margin_right = 44.0
margin_bottom = 4.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot_Frame" type="TextureRect" parent="Setup/Body"]
use_parent_material = true
margin_top = 26.0
margin_right = 44.0
margin_bottom = 30.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Face" type="Panel" parent="Setup"]
use_parent_material = true
margin_left = -22.0
margin_top = 90.0
margin_right = 22.0
margin_bottom = 119.0
focus_next = NodePath("../Skin")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Setup/Face"]
use_parent_material = true
margin_top = 1.0
margin_right = 44.0
margin_bottom = 14.0
text = "Face
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Setup/Face"]
use_parent_material = true
margin_top = 14.0
margin_right = 44.0
margin_bottom = 27.0
text = "L1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureRect" parent="Setup/Face"]
use_parent_material = true
margin_left = 1.0
margin_top = 18.0
margin_right = 4.0
margin_bottom = 24.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureRect" parent="Setup/Face"]
use_parent_material = true
margin_left = 40.0
margin_top = 18.0
margin_right = 43.0
margin_bottom = 24.0
texture = ExtResource( 3 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top_Frame" type="TextureRect" parent="Setup/Face"]
use_parent_material = true
margin_right = 44.0
margin_bottom = 4.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot_Frame" type="TextureRect" parent="Setup/Face"]
use_parent_material = true
margin_top = 26.0
margin_right = 44.0
margin_bottom = 30.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hair" type="Panel" parent="Setup"]
use_parent_material = true
margin_left = -22.0
margin_top = 120.0
margin_right = 22.0
margin_bottom = 149.0
focus_next = NodePath("../Skin")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Setup/Hair"]
use_parent_material = true
margin_top = 1.0
margin_right = 44.0
margin_bottom = 14.0
text = "Hair"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Setup/Hair"]
use_parent_material = true
margin_top = 14.0
margin_right = 44.0
margin_bottom = 27.0
text = "L1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureRect" parent="Setup/Hair"]
use_parent_material = true
margin_left = 1.0
margin_top = 18.0
margin_right = 4.0
margin_bottom = 24.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureRect" parent="Setup/Hair"]
use_parent_material = true
margin_left = 40.0
margin_top = 18.0
margin_right = 43.0
margin_bottom = 24.0
texture = ExtResource( 3 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top_Frame" type="TextureRect" parent="Setup/Hair"]
use_parent_material = true
margin_right = 44.0
margin_bottom = 4.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot_Frame" type="TextureRect" parent="Setup/Hair"]
use_parent_material = true
margin_top = 26.0
margin_right = 44.0
margin_bottom = 30.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hair_Colour" type="Panel" parent="Setup"]
use_parent_material = true
margin_left = -22.0
margin_top = 150.0
margin_right = 22.0
margin_bottom = 179.0
focus_next = NodePath("../Skin")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Setup/Hair_Colour"]
use_parent_material = true
margin_top = 1.0
margin_right = 44.0
margin_bottom = 14.0
text = "Colour
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Setup/Hair_Colour"]
use_parent_material = true
margin_top = 14.0
margin_right = 44.0
margin_bottom = 27.0
text = "L1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureRect" parent="Setup/Hair_Colour"]
use_parent_material = true
margin_left = -1.0
margin_top = 18.0
margin_right = 2.0
margin_bottom = 24.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureRect" parent="Setup/Hair_Colour"]
use_parent_material = true
margin_left = 42.0
margin_top = 18.0
margin_right = 45.0
margin_bottom = 24.0
texture = ExtResource( 3 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top_Frame" type="TextureRect" parent="Setup/Hair_Colour"]
use_parent_material = true
margin_right = 44.0
margin_bottom = 4.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot_Frame" type="TextureRect" parent="Setup/Hair_Colour"]
use_parent_material = true
margin_top = 26.0
margin_right = 44.0
margin_bottom = 30.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clothes" type="Panel" parent="Setup"]
use_parent_material = true
margin_left = -22.0
margin_top = 180.0
margin_right = 22.0
margin_bottom = 209.0
focus_next = NodePath("../Skin")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Setup/Clothes"]
use_parent_material = true
margin_top = 1.0
margin_right = 44.0
margin_bottom = 14.0
text = "Clothes
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="Setup/Clothes"]
use_parent_material = true
margin_top = 14.0
margin_right = 44.0
margin_bottom = 27.0
text = "L1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureRect" parent="Setup/Clothes"]
use_parent_material = true
margin_left = 1.0
margin_top = 18.0
margin_right = 4.0
margin_bottom = 24.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureRect" parent="Setup/Clothes"]
use_parent_material = true
margin_left = 40.0
margin_top = 18.0
margin_right = 43.0
margin_bottom = 24.0
texture = ExtResource( 3 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top_Frame" type="TextureRect" parent="Setup/Clothes"]
use_parent_material = true
margin_right = 44.0
margin_bottom = 4.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot_Frame" type="TextureRect" parent="Setup/Clothes"]
use_parent_material = true
margin_top = 26.0
margin_right = 44.0
margin_bottom = 30.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimLeft" type="AnimationPlayer" parent="."]
anims/body = SubResource( 3 )
anims/clothes = SubResource( 4 )
anims/face = SubResource( 6 )
anims/hair = SubResource( 7 )
anims/hair_colour = SubResource( 5 )

[node name="AnimRight" type="AnimationPlayer" parent="."]
anims/body = SubResource( 8 )
anims/clothes = SubResource( 9 )
anims/face = SubResource( 11 )
anims/hair = SubResource( 12 )
anims/hair_colour = SubResource( 10 )

[connection signal="mouse_entered" from="Setup/Body" to="." method="_on_Body_mouse_entered"]
[connection signal="mouse_entered" from="Setup/Face" to="." method="_on_Face_mouse_entered"]
[connection signal="mouse_entered" from="Setup/Hair" to="." method="_on_Hair_mouse_entered"]
[connection signal="mouse_entered" from="Setup/Hair_Colour" to="." method="_on_Hair_Colour_mouse_entered"]
[connection signal="mouse_entered" from="Setup/Clothes" to="." method="_on_Clothes_mouse_entered"]
